Updated for open spec with publisher
